--- a/src/components/Profile/profileHero.module.css
+++ b/src/components/Profile/profileHero.module.css
@@ -1,4 +1,4 @@
-/* .mainPhoto {
+.mainPhoto {
     width: 100px;
   }
   .profile__block {
@@ -69,4 +69,4 @@
     border-radius: 8px;
     cursor: pointer;
   }
-   */
+  
